<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">There are no items in the shop yet.</string>
    <string name="empty_view_subtitle_text">Add them in menu above.</string>
    <string name="button_add_item_label">Add item</string>
    <string name="button_sale_label">Sale 1 item</string>
    <string name="text_view_name_label">Product Name</string>
    <string name="text_view_price_label">Price</string>
    <string name="text_view_quantity_label">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="text_view_supplier_name_label">Supplier name</string>
    <string name="text_view_supplier_phone_label">Supplier phone</string>
    <string name="add_product_title">Add product</string>
    <string name="edit_product_title">Edit product</string>
    <string name="action_delete_all_entries">Delete all products</string>
    <string name="delete_all_label">Delete all</string>
    <string name="add_label">Add</string>
    <string name="action_delete_product">Delete product</string>
    <string name="save_product">Save</string>
    <string name="toast_msg_deletion_failed">Failed to delete product.</string>
    <string name="toast_msg_deletion_success">Product deleted.</string>
    <string name="toast_msg_cannot_save">Product was not saved. Valid name, price and quantity needed.</string>
    <string name="toast_msg_update_failed">Failed to update product.</string>
    <string name="toast_msg_update_success">Product updated successfully.</string>
    <string name="toast_msg_insert_failed">Failed to add product.</string>
    <string name="toast_msg_insert_success">Product added successfully.</string>
    <string name="call_supplier">Call supplier</string>
    <string name="field_required">Field is required</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
