<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_name_label"/>

        <EditText
            android:id="@+id/edit_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="@string/text_view_name_label"
            android:inputType="textCapWords"
            tools:text="Headphones"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_view_price_label"/>

        <EditText
            android:id="@+id/edit_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/text_view_price_label"
            android:inputType="numberDecimal"
            tools:text="10"/>

        <TextView
            android:id="@+id/text_view_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="$"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_quantity_label"/>

        <Button
            android:id="@+id/button_increase_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"/>

        <EditText
            android:id="@+id/edit_product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/text_view_quantity_label"
            android:inputType="numberDecimal"
            tools:text="54"/>

        <Button
            android:id="@+id/button_decrease_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_supplier_name_label"/>

        <EditText
            android:id="@+id/edit_supplier_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="@string/text_view_supplier_name_label"
            android:inputType="textCapWords"
            tools:text="John Smith"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/small_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_supplier_phone_label"/>

        <EditText
            android:id="@+id/edit_supplier_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="@string/text_view_supplier_phone_label"
            android:inputType="phone"
            tools:text="552 652 558"/>
    </LinearLayout>


</LinearLayout>
